@@ -1,0 +1,11 @@
+# -*- coding: utf-8 -*-
+from Products.CMFCore.utils import getToolByName
+from sc.galleria.support.config import PROJECTNAME
+
+
+def uninstall(portal, reinstall=False):
+    if not reinstall:
+        profile = 'profile-{0}:uninstall'.format(PROJECTNAME)
+        setup_tool = getToolByName(portal, 'portal_setup')
+        setup_tool.runAllImportStepsFromProfile(profile)
+        return 'Ran all uninstall steps.'
