@@ -1,11 +1,0 @@
-<?xml version="1.0"?>
-<object
-    name="portal_controlpanel"
-    xmlns:i18n="http://xml.zope.org/namespaces/i18n"
-    i18n:domain="sc.galleria.support"
-    purge="True">
-
-    <configlet action_id="galleria" remove="True" />
-
-</object>
-
